--- a/ecomm-warehouse/docker-compose.yml
+++ b/ecomm-warehouse/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
   postgres:
     image: postgres:15-alpine
@@ -39,7 +37,7 @@ services:
       - airflow_logs:/opt/airflow/logs
     ports:
       - "8080:8080"
-    command: bash -c "airflow db upgrade && airflow users create --username admin --password admin --firstname Admin --lastname User --role Admin --email admin@example.com 2>/dev/null; airflow webserver"
+    command: bash -c "pip install -q psycopg2-binary pandas requests 2>/dev/null; airflow db upgrade && airflow users create --username admin --password admin --firstname Admin --lastname User --role Admin --email admin@example.com 2>/dev/null; airflow webserver"
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost:8080/health"]
       interval: 10s
@@ -62,7 +60,7 @@ services:
       - ./src:/opt/airflow/src
       - ./data:/opt/airflow/data
       - airflow_logs:/opt/airflow/logs
-    command: bash -c "pip install -q -r /opt/airflow/requirements.txt; airflow scheduler"
+    command: bash -c "pip install -q psycopg2-binary pandas requests 2>/dev/null; airflow scheduler"
 
   pgadmin:
     image: dpage/pgadmin4:latest
